finish 2nd page

--- a/index.html
+++ b/index.html
@@ -30,30 +30,32 @@
         </div>
 
     </div>
-    <div class="2ndpage">
-        <div class="2nd-head">
-            <h2>Some random info</h2>
-        </div>
-        <div class="2nd-content">
-            <ul>
-                <li>
-                    <img src="cat.jpg" alt="image">
-                    <p>this is some subtext under an illustration or image</p>
-                </li>
-                <li>
-                    img src="cat.jpg" alt="image">
-                    <p>this is some subtext under an illustration or image</p>
-                </li>
-                <li>
-                    img src="cat.jpg" alt="image">
-                    <p>this is some subtext under an illustration or image</p>
-                </li>
-                <li>
-                    img src="cat.jpg" alt="image">
-                    <p>this is some subtext under an illustration or image</p>
-                </li>
+    <div class="second-page">
+        <div class="second-container">
+            <div class="second-head">
+                <h2>Some random info</h2>
+            </div>
+            <div class="second-content">
+                <ul>
+                    <li>
+                        <img src="cat.jpg" alt="image">
+                        <p>this is some subtext under an illustration or image</p>
+                    </li>
+                    <li>
+                        <img src="cat1.jpg" alt="image">
+                        <p>this is some subtext under an illustration or image</p>
+                    </li>
+                    <li>
+                        <img src="cat2.jpg" alt="image">
+                        <p>this is some subtext under an illustration or image</p>
+                    </li>
+                    <li>
+                        <img src="cat3.jpg" alt="image">
+                        <p>this is some subtext under an illustration or image</p>
+                    </li>
 
-            </ul>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="3rdpage">
