--- a/index.html
+++ b/index.html
@@ -58,22 +58,24 @@
             </div>
         </div>
     </div>
-    <div class="3rdpage">
-        <div class="3rd-content">
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe its just filling space or maybe people will actually read it. Who knows? All i knwo is that it looks nice.</p>
-            <p>-Thor,God of thunder</p>
+    <div class="third-page">
+        <div class="third-content">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe its just filling space or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+            <div class="quote">-Thor,God of thunder</div>
+            
         </div>
     </div>
-    <div class="4thpage">
-        <div class="4thcontainer">
-            <p>Call to action! It's time!</p>
-            <p>Sign up for our product by clicking that button right over there!</p>
+    <div class="fourth-page">
+        <div class="fourth-container">
+            <div class="fourth-left">
+                <div class="fourth-hero">Call to action! It's time!</div>
+                <div class="fourth-sub">Sign up for our product by clicking that button right over there!</div>
+            </div>    
             <button>Sign up</button>
+            
         </div>
     </div>
-    <div class="footer">
-        <p>Copyright The odin project 2021</p>
-    </div>
+    <div class="footer">Copyright © The odin project 2021</div>
 
 </body>
 </html>
